feat: adding login section and control for the routes
